# near-splash-contract-hello

./: Cargo.toml  README.md
src/: lib.rs
